# Hasclid

./: .gitignore  ALL_BUGS_KILLED.md  CAD_WEEK1_FINAL_RESULTS.md  CAPABILITY_MATRIX.md  CAPABILITY_SUMMARY.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  HARDER_THEOREM_CHALLENGE.md  IDIOMATIC_REFACTOR_PLAN.md  IDIOMATIC_REFACTOR_TODO.md  MILESTONE_PHASE1_PROGRESS.md  Main.hs  PREPROCESSING_FIXES_COMPLETE.md  PROVER_IMPROVEMENTS_STATUS.md  Parser.hs  README.md  REFACTORING_COMPLETE.md  ROADMAP_TO_COMPLETENESS.md  SESSION_REPORT_2025-12-13.md  SESSION_SUMMARY_2025-12-09.md  STRESS_SUITE_FIXED.md  STRESS_SUITE_RESULTS.md  STRESS_TEST_FINDINGS.md  TODO_FOUR_SQUARE_PATH.md  apollonius.euclid  barrow_general_run.txt  barrow_poly_run.txt  cauchy.euclid  check_cubicroot.hs  debug_cad_xy_plus_1.hs  debug_erdos_dump.hs  demo_script.euclid  deploy.yml  expr.hs  generic_apollonius.euclid  geometry_basics.lemmas  heron.euclid  improvement_plan.txt  index.html  inequality.euclid  (+62 more)
.cabal/: config
.claude/: settings.local.json
.github/workflows/: deploy.yml
bench/: BenchmarkF4.hs  RunStressSuite.hs  cyclic4.euclid  simple.euclid
docs/: CAD_COMPLETENESS_ANALYSIS.md  CAD_COMPLETION_PLAN.md  CAD_PHASE1_COMPLETE.md  CAD_STRESS_TEST_RESULTS.md  CASTLE_OF_CARDS_SOLVED.md  FEATURE_TODO.md  GEOSOLVER_ISSUES.md  GEOSOLVER_SYMBOLIC_TODO.md  GRAMMAR.bnf  Hasclid_Program_Geo.md  LANGUAGE.md  MACRO_UPGRADE_PLAN_2025-12-11.md  MULTI_SOLVER_SYSTEM.md  PHASE4_TIMEOUT_FALLBACK.md  PROVING_POWER.md  QUANTIFIER_PROGRESS_2025-12-04.md  QUANTIFIER_TODO.md  README.md  ROADMAP_TO_ERDOS_MORDELL.md  ROADMAP_TO_ERDOS_MORDELL_OPTIMIZED.md  SDP_SOLVER.md  STATUS_AND_NEXT_STEPS.md  STRESS_PLAN.md  STYLE_GUIDE.md  TERM_ORDERING.md  TODO_ROADMAP.md  TUTORIAL.md  refactor_plan.md
docs/archive/: APOLLONIUS_FIX.md  ASSESSMENT.md  BUG_REPORT_CAD_FALSE_POSITIVE.md  CAD_BUG_ROOT_CAUSE_ANALYSIS.md  CAPABILITY_SUMMARY.md  CHANGELOG.md  CUsersbaian.claudeplansCRITICAL_BUG_ANALYSIS.md  CUsersbaian.claudeplansmorley-proof-COMPLETE.md  CUsersbaian.claudeplansphase2-results.md  CUsersbaian.claudeplansphase3-strategy.md  DESCENT_ARGUMENT_VERIFIED.md  DESCENT_VERIFICATION_COMPLETE.md  FULL_STRESS_TEST_ANALYSIS.md  IMPROVEMENT_ROADMAP.md  LAGRANGE_COMMAND_READY.md  LEMMA1_SUCCESS.md  MILESTONE_2_COMPLETE.md  MILESTONE_3_COMPLETE.md  MOST_COMPLEX_THEOREMS_PROVED.md  NAPOLEON_THEOREM_PROVED.md  NOTES.md  NUMBER_THEORY_UPDATE.md  OPERATOR_FIX_COMPLETE.md  PROVER_IMPROVEMENTS_STATUS.md  PTOLEMY_THEOREM_RESULTS.md  PUSH_SUMMARY.md  PUSH_SUMMARY_OPERATORS.md  README.md  REAL_WORLD_STRESS_TEST_RESULTS.md  ROADMAP_TO_COMPLETENESS.md  ROUTING_BUG_FIX_RESULTS.md  SESSION_COMPLETE_SUMMARY.md  SESSION_REPORT_2025-12-13.md  SQRT_ELIMINATION_ANALYSIS.md  SQRT_FIX_SUMMARY.md  STRESS_TEST_FINDINGS.md  TODO_FOUR_SQUARE_PATH.md  TRIANGLE_INEQUALITY_ANALYSIS.md  analyze_square_problem.txt  cad_critical_results.txt  (+11 more)
docs/notes/: CAD_BUG_FIX_SUMMARY.md  CAPABILITY_MATRIX.md  CAPABILITY_SUMMARY.md  IDIOMATIC_REFACTOR_TODO.md  PROGRESS.md
examples/: Apollonius_Problem.euclid  AreaTest.hs  Blundon.euclid  Newton_Girard.euclid  Ono_Inequality_Tangent.euclid  Ono_inq.euclid  RefactorDemo.hs  Thebault_Problem_III.euclid  UnifiedAPI_Demo.hs  circle_debug.euclid  circle_through_three_points.euclid  circle_wlog.euclid  descent_concrete.euclid  erdos_mordell_compositional.euclid  erdos_mordell_generic_final.euclid  erdos_mordell_generic_prove.euclid  erdos_mordell_lemma_Ra.euclid  erdos_mordell_lemma_Rb.euclid  erdos_mordell_lemma_ge.euclid  erdos_mordell_no_roots.euclid  focused_capability_test.euclid  hayashi_inequality.euclid  int_congruence.euclid  morley_complete_proof.euclid  morley_complete_v2.euclid  morley_concrete.euclid  morley_full.euclid  morley_generic_symbolic.euclid  morley_lemma2.euclid  morley_lemma2_poly.euclid  morley_reverse.euclid  morley_step1_setup.euclid  ono_inequality.euclid  ptolemy_square.euclid  quantifier_stress.euclid  repl_session_demo.txt  sqrt_test.euclid  stress_sqrt.euclid  test_auto_simplify.euclid  test_error_handling.euclid  (+13 more)
examples/stress_suite/: 01_Apollonius.euclid  02_Varignon.euclid  03_Orthocenter.euclid  04_NinePointCircle.euclid  04_NinePointCircle_v2.euclid  04_NinePointCircle_v3.euclid  05_CauchySchwarz.euclid  05_CauchySchwarz_free.euclid  06_TriangleInequality.euclid  06_TriangleInequality_concrete.euclid  06_TriangleInequality_v2.euclid  06_TriangleInequality_v3.euclid  06_TriangleInequality_v4.euclid  07_Ptolemy.euclid  08_Euler_d2.euclid  09_Weitzenbock.euclid  09_Weitzenbock_concrete.euclid  10_ErdosMordell_Rb.euclid  10_ErdosMordell_Rb_concrete.euclid  10_ErdosMordell_Rb_v2.euclid  10_ErdosMordell_Rb_v3.euclid
src/: Algebraic.hs  AreaMethod.hs  BuchbergerOpt.hs  CAD.hs  CADLift.hs  Cache.hs  CounterExample.hs  Error.hs  Expr.hs  F4Lite.hs  F5.hs  GeoSolver.hs  Heuristics.hs  IntSolver.hs  Interval.hs  Lagrange.hs  Linearizer.hs  Locus.hs  Main.hs  Modular.hs  Parser.hs  Polynomial.hs  PolynomialFactor.hs  Positivity.hs  Preprocessing.hs  ProblemAnalyzer.hs  ProofExplanation.hs  ProofMode.hs  Prover.hs  RationalElim.hs  ReplSupport.hs  SolverRouter.hs  SqrtElim.hs  Sturm.hs  TermOrder.hs  Timeout.hs  Validation.hs  WebMain.hs  Wu.hs
src/Core/: GB.hs  Orchestrator.hs  Problem.hs  Solver.hs  Types.hs
src/Geometry/: Angle.hs  Barycentric.hs  WLOG.hs
src/Positivity/: FacialReduction.hs  GeneralizedSturm.hs  Numerical.hs  SDP.hs  SOS.hs  SOSTypes.hs  Sampling.hs  SymmetricSOS.hs
src/Solvers/: Algebraic.hs  Groebner.hs  Interval.hs  Metric.hs  Wu.hs
test/: ExamplesSpec.hs  IntegrationSpec.hs  IntervalSolverSpec.hs  IntervalSpec.hs  PropertySpec.hs  Spec.hs  TestF4.hs  TestF5.hs
test/euclid/: Erdos_Mordell_inequality.euclid  Nicomachus.euclid  Ptolemy.euclid  area_foot_test.euclid  barrow_2var.euclid  barrow_3var.euclid  barrow_component.euclid  barrow_concrete.euclid  barrow_core.euclid  barrow_direct.euclid  (+139 more)
theorems/: Peaucellier_Lipkin_Linkage.euclid  box_diagonal.euclid  cauchy_witness.euclid  distance_positive.euclid  envelope.euclid  stress_2d_cad.euclid  stress_cad.euclid  torus.euclid
(+18 files in other folders)
