cabal-version:      3.0
name:               prover
version:            0.1.0.0
synopsis:           A Haskell-based theorem prover for Euclidean geometry.
description:
    This project implements a theorem prover for Euclidean geometry
    and inequalities using algebraic methods, including Groebner bases
    and Sturm's theorem.

homepage:           https://github.com/TACITVS/Hasclid
bug-reports:        https://github.com/TACITVS/Hasclid/issues
license:            MIT
license-file:       LICENSE
author:             TACITVS
maintainer:         TACITVS
category:           Math, Logic
build-type:         Simple
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable prover
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        Core.GB
        AreaMethod
        BuchbergerOpt
        CAD
        CADLift
        Cache
        CounterExample
        Error
        Expr
        GeoSolver
        Modular
        Parser
        PolynomialFactor
        Positivity
        ProblemAnalyzer
        Prover
        RationalElim
        SolverRouter
        SqrtElim
        Sturm
        TermOrder
        Validation
        ReplSupport
        F4Lite
        Wu
    build-depends:
        base >= 4.16 && < 5,
        containers ^>=0.6.7,
        mtl ^>=2.3,
        random ^>=1.2
    default-language: GHC2021
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite prover-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test, src
    other-modules:
        Core.GB
        AreaMethod
        BuchbergerOpt
        CAD
        CADLift
        Cache
        CounterExample
        Error
        Expr
        GeoSolver
        Modular
        Parser
        PolynomialFactor
        Positivity
        ProblemAnalyzer
        Prover
        RationalElim
        SolverRouter
        SqrtElim
        Sturm
        TermOrder
        Validation
        ReplSupport
        F4Lite
        Wu
    build-depends:
        base >= 4.16 && < 5,
        containers ^>=0.6.7,
        mtl ^>=2.3,
        QuickCheck ^>=2.14,
        random ^>=1.2
    default-language: GHC2021
    ghc-options: -Wall -Wno-unused-imports -Wno-incomplete-patterns -Wno-name-shadowing
